chore(release): publish
 - gatsby-example-flex@1.1.5
 - gatsby-starter-flex@1.2.0
 - gatsby-theme-flex@0.2.0

--- a/content/pages/docs/index.mdx
+++ b/content/pages/docs/index.mdx
@@ -17,7 +17,7 @@ description: Learn more about Blocks
 Create a new Flex site:
 
 ```shell
-gatsby new site http://github.com/arshad/gatsby-starter-flex
+gatsby new site arshad/gatsby-starter-flex
 ```
 
 Start the development server
